// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownList /> renders correctly 1`] = `
<View
  style={
    {
      "marginVertical": 8,
      "width": "85%",
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        {
          "color": "#BA1A1A",
          "fontFamily": "Nunito-Bold",
        },
      ]
    }
  >
    *
    <Text
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0.15,
            "lineHeight": 24,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          {
            "fontFamily": "Nunito-Medium",
          },
        ]
      }
    />
  </Text>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderColor": "gray",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 12,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Nunito-Medium",
            },
            undefined,
          ]
        }
      >
        Select option
      </Text>
      <Image
        resizeMode="contain"
        source={1}
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`<FormInput /> renders correctly 1`] = `
<View
  style={
    {
      "marginVertical": 8,
      "width": "85%",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "rgba(231, 224, 236, 1)",
          "borderTopLeftRadius": 4,
          "borderTopRightRadius": 4,
        },
        {
          "alignContent": "center",
          "backgroundColor": "transparent",
          "fontFamily": "Nunito-Medium",
          "width": "100%",
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(179, 38, 30, 1)",
          "bottom": 0,
          "height": 1,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "transform": [
            {
              "scaleY": 2,
            },
          ],
          "zIndex": 1,
        }
      }
      testID="text-input-underline"
    />
    <View
      style={
        [
          {
            "paddingBottom": 0,
            "paddingTop": 0,
          },
          {
            "minHeight": 56,
          },
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": 0,
              },
            ],
            "zIndex": 3,
          }
        }
      >
        <Text
          collapsable={false}
          maxFontSizeMultiplier={1.5}
          numberOfLines={1}
          onLayout={[Function]}
          style={
            {
              "color": "rgba(179, 38, 30, 1)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": undefined,
              "left": 0,
              "letterSpacing": 0.15,
              "lineHeight": undefined,
              "opacity": 0,
              "position": "absolute",
              "textAlign": "left",
              "top": 30,
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "translateY": 0,
                },
                {
                  "scale": 1,
                },
              ],
              "writingDirection": "ltr",
            }
          }
          testID="form-input-label-active"
        >
          Label
        </Text>
        <Text
          collapsable={false}
          maxFontSizeMultiplier={1.5}
          numberOfLines={1}
          style={
            {
              "color": "rgba(179, 38, 30, 1)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": undefined,
              "left": 0,
              "letterSpacing": 0.15,
              "lineHeight": undefined,
              "opacity": 1,
              "position": "absolute",
              "textAlign": "left",
              "top": 30,
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "translateY": 0,
                },
                {
                  "scale": 1,
                },
              ],
              "writingDirection": "ltr",
            }
          }
          testID="form-input-label-inactive"
        >
          Label
        </Text>
      </View>
      <TextInput
        editable={true}
        maxFontSizeMultiplier={1.5}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder=" "
        placeholderTextColor="rgba(73, 69, 79, 1)"
        selectionColor="rgba(179, 38, 30, 1)"
        style={
          [
            {
              "margin": 0,
            },
            {
              "paddingLeft": 0,
              "paddingRight": 0,
            },
            {
              "height": 56,
            },
            {
              "paddingBottom": 4,
              "paddingTop": 24,
            },
            {
              "color": "rgba(73, 69, 79, 1)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": undefined,
              "letterSpacing": 0.15,
              "lineHeight": undefined,
              "textAlign": "left",
              "textAlignVertical": "center",
            },
            false,
            [
              {},
            ],
            undefined,
          ]
        }
        testID="form-input"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
  <Text
    collapsable={false}
    maxFontSizeMultiplier={1.5}
    onLayout={[Function]}
    style={
      {
        "color": "rgba(179, 38, 30, 1)",
        "fontFamily": "System",
        "fontSize": 12,
        "fontWeight": "400",
        "letterSpacing": 0.25,
        "lineHeight": 20,
        "opacity": 1,
        "paddingVertical": 4,
        "textAlign": "left",
        "transform": [
          {
            "translateY": -0,
          },
        ],
        "writingDirection": "ltr",
      }
    }
  >
    Error: 
    Error
  </Text>
</View>
`;

exports[`<NumberSpinner /> renders correctly 1`] = `
<View
  style={
    {
      "marginVertical": 8,
      "width": "85%",
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        {
          "color": "#BA1A1A",
          "fontFamily": "Nunito-Bold",
        },
      ]
    }
  >
    *
    <Text
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0.15,
            "lineHeight": 24,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          {
            "fontFamily": "Nunito-Medium",
          },
        ]
      }
    />
  </Text>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
        {
          "borderColor": "#d4d4d4",
          "height": 40,
          "width": 170,
        },
        {
          "borderRadius": 7.199999999999999,
        },
        {},
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F8F9FD",
          "borderBottomLeftRadius": 7.199999999999999,
          "borderTopLeftRadius": 7.199999999999999,
          "borderWidth": 0,
          "height": 38,
          "justifyContent": "center",
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "width": 51,
          "zIndex": -1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 15.2,
            },
            [
              {
                "backgroundColor": "rgba(0,0,0,0)",
                "fontWeight": "900",
              },
              {},
              {},
              {},
            ],
            {
              "fontFamily": "ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignSelf": "center",
            "borderLeftColor": "#d4d4d4",
            "borderLeftWidth": 1,
            "borderRightColor": "#d4d4d4",
            "borderRightWidth": 1,
          },
        ]
      }
    >
      <TextInput
        editable={false}
        keyboardType="numeric"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        returnKeyType="done"
        style={
          [
            {
              "padding": 0,
              "textAlign": "center",
            },
            {
              "borderLeftColor": "#d4d4d4",
              "borderLeftWidth": 1,
              "borderRightColor": "#d4d4d4",
              "borderRightWidth": 1,
              "color": "black",
              "fontSize": 15.2,
              "height": 40,
              "width": 68,
            },
            {},
          ]
        }
        underlineColorAndroid="rgba(0,0,0,0)"
        value="2023"
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F8F9FD",
          "borderBottomRightRadius": 7.199999999999999,
          "borderTopRightRadius": 7.199999999999999,
          "borderWidth": 0,
          "height": 38,
          "justifyContent": "center",
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "width": 51,
          "zIndex": -1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 15.2,
            },
            [
              {
                "backgroundColor": "rgba(0,0,0,0)",
                "fontWeight": "900",
              },
              {},
              {},
              {},
            ],
            {
              "fontFamily": "ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`<TimeInput /> renders correctly 1`] = `
<View
  style={
    {
      "marginVertical": 8,
      "width": "85%",
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        {
          "color": "#BA1A1A",
          "fontFamily": "Nunito-Bold",
        },
      ]
    }
  >
    *
    <Text
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0.15,
            "lineHeight": 24,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          {
            "fontFamily": "Nunito-Medium",
          },
        ]
      }
    />
  </Text>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#05668D",
        "borderRadius": 20,
        "margin": 4,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
        "width": "50%",
      }
    }
    testID="button-container-outer-layer"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#05668D",
          "borderColor": "#05668D",
          "borderRadius": 20,
          "borderStyle": "solid",
          "borderWidth": 0,
          "flex": undefined,
          "minWidth": 64,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        }
      }
      testID="button-container"
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "borderRadius": 20,
            },
          ]
        }
        testID="button"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <Text
            numberOfLines={1}
            selectable={false}
            style={
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "marginHorizontal": 16,
                    "marginVertical": 9,
                    "textAlign": "center",
                  },
                  false,
                  {
                    "marginHorizontal": 12,
                  },
                  undefined,
                  false,
                  {
                    "color": "white",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  undefined,
                ],
              ]
            }
            testID="button-text"
          >
            Pick Time
             
          </Text>
        </View>
      </View>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        {
          "color": undefined,
          "fontFamily": "Nunito-Medium",
          "textAlign": undefined,
        },
      ]
    }
  >
    Selected Time: 07:00 (SGT, GMT+8)
  </Text>
  <Text
    style={
      [
        {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0.4,
          "lineHeight": 16,
        },
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        {
          "color": undefined,
          "fontFamily": "Nunito-Medium",
          "textAlign": undefined,
        },
      ]
    }
  >
    *Selected Time may be different if your device is not in SGT!
  </Text>
</View>
`;

exports[`<TwoRadioInput /> renders correctly 1`] = `
<View
  style={
    {
      "marginVertical": 8,
      "width": "85%",
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        {
          "color": "#BA1A1A",
          "fontFamily": "Nunito-Bold",
        },
      ]
    }
  >
    *
    <Text
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0.15,
            "lineHeight": 24,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          {
            "fontFamily": "Nunito-Medium",
          },
        ]
      }
    />
  </Text>
  <View
    accessibilityRole="radiogroup"
  >
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="First"
        accessibilityRole="radio"
        accessibilityState={
          {
            "busy": undefined,
            "checked": true,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            false,
            undefined,
          ]
        }
      >
        <View
          pointerEvents="none"
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 16,
                "paddingVertical": 8,
              },
              {
                "marginRight": 8,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  false,
                  {
                    "color": "rgba(28, 27, 31, 1)",
                    "textAlign": "left",
                  },
                  undefined,
                ],
              ]
            }
          >
            First
          </Text>
          <View
            accessibilityLiveRegion="polite"
            accessibilityRole="radio"
            accessibilityState={
              {
                "busy": undefined,
                "checked": true,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            color="#05668D"
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 18,
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "borderColor": "#05668D",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "margin": 8,
                  "width": 20,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "#05668D",
                      "borderRadius": 5,
                      "height": 10,
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                      "width": 10,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="Second"
        accessibilityRole="radio"
        accessibilityState={
          {
            "busy": undefined,
            "checked": false,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            false,
            undefined,
          ]
        }
      >
        <View
          pointerEvents="none"
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 16,
                "paddingVertical": 8,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  false,
                  {
                    "color": "rgba(28, 27, 31, 1)",
                    "textAlign": "left",
                  },
                  undefined,
                ],
              ]
            }
          >
            Second
          </Text>
          <View
            accessibilityLiveRegion="polite"
            accessibilityRole="radio"
            accessibilityState={
              {
                "busy": undefined,
                "checked": false,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            color="#05668D"
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 18,
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "borderColor": "rgba(73, 69, 79, 1)",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "margin": 8,
                  "width": 20,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<UploadPhotos /> renders correctly 1`] = `
<View
  style={
    {
      "marginVertical": 8,
      "width": "85%",
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        {
          "color": undefined,
          "fontFamily": "Nunito-Medium",
          "textAlign": undefined,
        },
      ]
    }
  />
  <View>
    <View
      collapsable={false}
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#05668D",
            "borderRadius": 20,
            "margin": 4,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
            "width": "50%",
          }
        }
        testID="button-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#05668D",
              "borderColor": "#05668D",
              "borderRadius": 20,
              "borderStyle": "solid",
              "borderWidth": 0,
              "flex": undefined,
              "minWidth": 64,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="button-container"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 20,
                },
              ]
            }
            testID="button"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "marginLeft": 12,
                      "marginRight": -4,
                    },
                    {
                      "marginLeft": 16,
                      "marginRight": -16,
                    },
                    {
                      "marginLeft": 12,
                      "marginRight": -8,
                    },
                  ]
                }
                testID="button-icon-container"
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "white",
                        "fontSize": 20,
                      },
                      undefined,
                      {
                        "fontFamily": "ionicons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                        "textAlign": "center",
                      },
                      false,
                      {
                        "marginHorizontal": 16,
                      },
                      undefined,
                      false,
                      {
                        "color": "white",
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      undefined,
                    ],
                  ]
                }
                testID="button-text"
              >
                Upload
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        {
          "color": undefined,
          "fontFamily": "Nunito-Medium",
          "textAlign": undefined,
        },
      ]
    }
  >
    Image: 
  </Text>
</View>
`;
